tests/semantic_errors/andrei7_4.tl
require "ifj21"

function main()
    local id : integer = "sttt"
end

main()
